// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Primary 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <button
    className="bg-slate-900 hover:bg-slate-500 text-white font-semibold hover:text-white py-2 px-4 border"
    type="button"
  >
    I am a Button
  </button>
</div>
`;

exports[`Storyshots PageTitle Default 1`] = `
<div
  style={
    Object {
      "margin": "3em",
    }
  }
>
  <h1
    className="font-display font-extrabold text-4xl"
  >
    I am a Page Title
  </h1>
</div>
`;
